[project]
name = "p4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apiflask>=3.1.0",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "unicorn>=2.1.4",
]
